# nebular_emission_model

./: .gitignore  CLAUDE.md  README.md  balmer_floor_summary.csv  nf_desi_bgs.eqx  nf_desi_bgs_meta.pkl  nf_eval_metrics_with_nll.csv  nf_eval_nll_corrected.csv  nf_eval_pointmetrics_corrected.csv  nf_eval_sdss_metrics_vs_sdsslike_desi.csv  nf_eval_sdss_metrics_with_nll.csv  nf_sdss_main.eqx  nf_sdss_main_meta.pkl  pyproject.toml  submit.sh
data/: example.py
docs/: balmer_conditioning_crosssurvey.csv  balmer_conditioning_results.csv  benchmark_nll.csv  benchmark_tails.csv  bib_keys_to_add.md  byler_grid.csv  byler_grid_dense.csv  corrected_results_step1.md  cue_agn_grid.csv  cue_grid.csv  doublet_ratio_bounds.csv  lhalpha_zeropoint_rho_sweep.csv  mstar_zeropoint_rho_sweep.csv  mstar_zeropoint_summary.csv  mstar_zeropoint_sweep.csv  mstar_zeropoint_wide_sweep.csv  pit_coverage_summary.csv  review_response.md  step2_results.md  step2b_writing_items.md  tier1_frobenius.csv  writing_pass_step1.md  zdecomp_ratio_vs_z.csv
scripts/: add_colorSM_to_SDSS_fits.py  add_colorSM_to_desifits.py  add_colorSM_to_desifits_OLD.py  add_colorSM_to_desifits_andrescale_fluxes.py  add_colorSM_to_desifits_v2.py  add_colorSM_to_sdsslike_desi.py  agn_fraction_oiii.py  benchmark_nll_tails.py  check_balmer_dec_from_flows.py  check_desi_lum_percentiles.py  check_doublet_ratios.py  check_sdss_lum_percentiles.py  color_outliers_sdss.py  color_outliers_sdss_stats.py  compute_balmer_p50.py  confirm_h.py  convert_wrap.py  crossmatch_sdss_desi.py  dataset_comparison_noNF_ratio_space.csv  gen_cue_grid.py  (+78 more)
(+56 files in other folders)
