[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "normflow"
version = "0.1.0"
description = "Utilities for survey-transferable generative model of nebular emission statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "astropy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
